Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Standard_Support__c.field-meta.xml
<CustomField>
    <fullName>Standard_Support__c</fullName>
    <label>Standard Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>