Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Subscription_Year__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Year__c</fullName>
    <formula>TEXT(Product_Type__c) &amp; &quot; &quot; &amp;  TEXT(SegmentIndex_Year__c)</formula>
    <label>Subscription Year</label>
    <type>Text</type>
</CustomField>