Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Subscription_Year_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Year_Bundle__c</fullName>
    <formula>if(Print_at_Quote__c, TEXT(Product_Type__c) &amp; &quot; &quot; &amp; TEXT(SegmentIndex_Year__c), TEXT(Product_Type__c))</formula>
    <label>Subscription Year (Bundle)</label>
    <type>Text</type>
</CustomField>