Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Subscription_Year_Non_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Year_Non_Bundle__c</fullName>
    <formula>if (AND( Bundle_Product__c ==FALSE , SBQQ__RequiredBy__c == NULL), TEXT(Product_Type__c) &amp; &quot; &quot; &amp; TEXT(SegmentIndex_Year__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Year (Non Bundle)</label>
    <type>Text</type>
</CustomField>