Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Summary_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Summary_Product_Group__c</fullName>
    <formula>TEXT(SBQQ__Product__r.Summary_Product_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary Product Group</label>
    <type>Text</type>
</CustomField>