Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Support_Value__c.field-meta.xml
<CustomField>
    <fullName>Support_Value__c</fullName>
    <formula>CASE(Support_Level__c,
  &quot;Standard&quot;, 0,
  &quot;Gold&quot;, (Net_Price_for_Support__c-(Net_Price_for_Support__c/1.15)),
  &quot;Platinum&quot;,(Net_Price_for_Support__c-(Net_Price_for_Support__c/1.25)),
  0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>