Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Temp_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Temp_Quantity__c</fullName>
    <label>Temp Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>