Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Temp_Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Temp_Support_Level__c</fullName>
    <label>Temp Support Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>