Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <formula>IF(
SBQQ__Quote__r.SBQQ__SubscriptionTerm__c&lt;12,
ROUND(SBQQ__Quote__r.SBQQ__SubscriptionTerm__c,0),
ROUND((SBQQ__EffectiveEndDate__c - SBQQ__EffectiveStartDate__c) / 365 * 12,0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>