Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price__c</fullName>
    <label>Total List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>