Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Twelve_Month_Term__c.field-meta.xml
<CustomField>
    <fullName>Twelve_Month_Term__c</fullName>
    <formula>&quot;12 Months&quot;</formula>
    <label>Twelve Month Term</label>
    <type>Text</type>
</CustomField>