Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Custom Field built to reflect difference between quote lines based on the quote type field.
Built according to US# BIZ-46106</description>
    <formula>TEXT( SBQQ__Quote__r.SBQQ__Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>