Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Unit_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sale_Price__c</fullName>
    <description>Unit Sale Price</description>
    <formula>SBQQ__ListPrice__c * (1 -   SBQQ__Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>