Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Uplift_qtc__c.field-meta.xml
<CustomField>
    <fullName>Uplift_qtc__c</fullName>
    <description>Custom uplift % used to apply discount to previous segment customer price rather than out of box SBQQ__Uplift__c field which only applies to List price.</description>
    <label>Uplift %</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>