Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Uplifted_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Uplifted_Unit_Price__c</fullName>
    <formula>SBQQ__ListPrice__c * (1 + SBQQ__Uplift__c)</formula>
    <label>Uplifted Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>