Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Year_2_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Year_2_Quantity__c</fullName>
    <description>Quantity for Year 2</description>
    <label>Year 2 Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>