Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Year_4_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Year_4_Quantity__c</fullName>
    <description>Created to ramp up select bundle Quantity for Year 4. Created as part of BIZ-54502.</description>
    <label>Year 4 Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>