Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/YOY_Quantity_Change__c.field-meta.xml
<CustomField>
    <fullName>YOY_Quantity_Change__c</fullName>
    <description>Created as part of BIZ-46107 which will calculate automatically for Subscription products(product type = software).</description>
    <label>YOY Quantity Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>