Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/ACVType_and_ACVTypeOverride_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ACVType_and_ACVTypeOverride_Validation</fullName>
    <active>false</active>
    <description>Only users with Admin Override permission can update ACV Type and ACV Type Override fields.
Built according to user story-BIZ45119.</description>
    <errorConditionFormula>AND(
	OR(
		NOT($Permission.Operations_User)
		),
	OR(
		OR(
			ISCHANGED( ACV_Type_Override__c),
			ISCHANGED( ACV_Type__c)
		  ),
		AND(
			ISNEW(),OR(( ACV_Type_Override__c=true),
			ISCHANGED( ACV_Type__c))
			)
	   )
)</errorConditionFormula>
    <errorDisplayField>ACV_Type__c</errorDisplayField>
    <errorMessage>You are not allowed to override ACV Type , please request Contract/CRM Ops.</errorMessage>
</ValidationRule>