Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Billing_Frequency_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Frequency_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $Permission.Operations_User ),
NOT(ISNEW()), 
ISCHANGED( SBQQ__BillingFrequency__c )
)</errorConditionFormula>
    <errorMessage>You are not allowed to override Billing Frequency , please request Contract/CRM Ops.</errorMessage>
</ValidationRule>