Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Cant_enter_negative_discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_enter_negative_discount</fullName>
    <active>false</active>
    <description>Locks negative discount for all users except ContractOps</description>
    <errorConditionFormula>AND(IF(SBQQ__Discount__c&lt;0,true,false),AND(NOT($User.ProfileId =&quot;00e50000001BmUZ&quot;), NOT($User.Id =&quot;00550000002q64G&quot;), NOT($User.Id =&quot;0052J000008gbpM&quot;)))</errorConditionFormula>
    <errorMessage>You can&apos;t enter negative REC discount</errorMessage>
</ValidationRule>