Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/OSA_list_price_for_bundle_is_blocked.validationRule-meta.xml
<ValidationRule>
    <fullName>OSA_list_price_for_bundle_is_blocked</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 Is_Bundle_Product__c = TRUE,
ISCHANGED(OSA_List_Price__c)
)</errorConditionFormula>
    <errorMessage>You cant change OSA List price on a Bundle level. Please update child products price.</errorMessage>
</ValidationRule>