Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Quote_Line_Update_On_Request_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Line_Update_On_Request_Submitted</fullName>
    <active>true</active>
    <errorConditionFormula>SBQQ__Quote__r.OP4I_Status__c = &apos;Request Submitted&apos;</errorConditionFormula>
    <errorMessage>System is processing the previous request. Please wait till the OP4I Status = Synced</errorMessage>
</ValidationRule>