Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Revenue_Qty_Must_Be_in_Multiples_of_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Revenue_Qty_Must_Be_in_Multiples_of_100</fullName>
    <active>false</active>
    <description>The quantity entered must be in multiples of 100 (500+) for Revenue Meter Type.</description>
    <errorConditionFormula>AND( (TEXT(Meter_Type__c) =&quot;Revenue&quot;),
License_Product__c = TRUE,
NOT(ISPICKVAL(SBQQ__Product__r.Product_Group__c, &quot;Ops Only - Do Not Use&quot;)),
NOT(ISPICKVAL(SBQQ__Product__r.Product_Group__c, &quot;Legacy OnePlace licenses&quot;)),
SBQQ__Product__r.Item_Master_Product__r.Intapp_Item_Master_Number__c != &quot;EX-01542&quot;,
SBQQ__Product__r.Item_Master_Product__r.Intapp_Item_Master_Number__c != &quot;BU-00989&quot;,
SBQQ__Product__r.Item_Master_Product__r.Intapp_Item_Master_Number__c != &quot;TM-01544&quot;,
SBQQ__Product__r.Item_Master_Product__r.Intapp_Item_Master_Number__c != &quot;PR-01543&quot;,
SBQQ__Product__r.Item_Master_Product__r.Intapp_Item_Master_Number__c != &quot;IN-01465&quot;,
SBQQ__Product__r.Item_Master_Product__r.Intapp_Item_Master_Number__c != &quot;CO-01466&quot;,
SBQQ__Quantity__c&gt;=500,
$Profile.Name&lt;&gt;&quot;Standard User - Sales Operations&quot;,
$User.Id &lt;&gt; &quot;00550000002q64G&quot; /*Jennifer Richard*/,
(OR(
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.1&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.2&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.3&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.4&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.5&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.6&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.7&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.8&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.9&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.01&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.02&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.03&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.04&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.05&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.06&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.07&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.08&quot;)),
(CONTAINS(TEXT(SBQQ__Quantity__c/100),&quot;.09&quot;))
))
)</errorConditionFormula>
    <errorMessage>The quantity entered must be in multiples of 100 (500+) for Revenue Meter Type.</errorMessage>
</ValidationRule>